@@ -1,7 +1,8 @@
 v1.6
-	album view, improvements to lib modes, artwork...
+	threaded method for artwork for lib modes
+	better VA support for album mode
 	replace remove_list_duplicates...
-	support for new idle command
+	support for new idle command (waiting on python-mpd)
 	work with mpd's new "allow authenticated local users to add any local file to the playlist"
 		- waiting on python-mpd to implement unix socket paths
 		- dnd from a file manager (implemented and untested because of above)
